add closing html tag

--- a/Index.html
+++ b/Index.html
@@ -18,3 +18,4 @@
 <p><a href="https://google.com" Title="For Finding Shit"> Search for Stuff and Things</a></p>
 <img src=images/wallpaper.jpg />
 </body>
+</html>
