added background gradient and updated the page head title

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dustin's Practice Web Page</title>
+    <title>Dustin Burstad's Portfolio</title>
     <link rel="stylesheet" href="style.css" >
   </head>
 
 
 <body>
+
+
+
 <div id="titlebox"><h1 id="webtitle">Welcome to My Site</h1><br><h2 id="websubtit">This is Where I Practice Web Development Skills</h2></div>
 <br>
 
