Created Homepage for portfolio site.  Pushing to live hosting.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dustin Burstad's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
+    <title>Welcome to Dustin Burstad's Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" >
   </head>
-
-
-<body>
-
-
-
-
-</body>
-
+  <body>
+    <div id="logobox"><img id="logo" src="images/Logo.svg"></div>
+    <div class="nav">
+      <ul>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contactme.html">Contact Me</a></li>
+      </ul>
+    </div>
+    <main>
+      <h1 id="hero">Dustin LaBarre-Burstad</h1>
+      <ul id="subhero">
+        <li>Marketing Professional.</li>
+        <li>Graphic Designer.</li>
+        <li>Web Developer.</li>
+        <li>Solution Provider.</li>
+      </ul>
+    </main>
+   <footer>
+    <img id="footvector" src="images/footer-vector.svg">
+   </footer>
+  </body>
 </html>
+
