updated media query.

--- a/contactme.html
+++ b/contactme.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
 
