--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css" >
   </head>
   <body>
-    <div id="logobox"><img id="logo" src="images/Logo.svg"></div>
-    <div class="nav">
+    <nav>
+      <img id="logo" src="images/Logo.svg">
       <ul>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
       </ul>
-    </div>
+    </nav>
     <main>
       <h1 id="hero">Dustin LaBarre-Burstad</h1>
       <ul id="subhero">
