added nav and headers to contact me and about me pages.

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-
+<nav id="portnav">
+    <img id="logo" src="images/Logo.svg">
+    <ul>
+        <li id="port">About Me</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contactme.html">Contact Me</a></li>
+    </ul>
+</nav>
+<h1 id="h-port">About Me.</h1>
 </body>
 </html>
