added vector image and updated contact and about pages. cleaned up css and html.

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body id="portbody">
+    <img id="vector" src="images/footer-vector.svg">
     <nav id="portnav">
         <img id="logo" src="images/Logo.svg">
         <ul>
