--- a/contactme.html
+++ b/contactme.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-<nav id="portnav">
-    <img id="logo" src="images/Logo.svg">
-    <ul>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li id="port">Contact Me</li>
-    </ul>
-</nav>
+    <img id="vector" src="images/footer-vector.svg">
+    <nav id="portnav">
+        <img id="logo" src="images/Logo.svg">
+        <ul>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li id="port">Contact Me</li>
+        </ul>
+    </nav>
 <h1 id="h-port">Contact Me.</h1>
 
 </body>
