--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Dustin Burstad's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" >
   </head>
   <body>
-    <nav>
+    <div>
       <img id="logo" src="images/Logo.svg">
+    </div>
+    <nav>
       <ul>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
