added home link in logo to return to landing page from the 3 sub pages.

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 <body>
     <img id="vector" src="images/footer-vector.svg">
     <nav id="portnav">
-        <img id="logo" src="images/Logo.svg">
+        <a href="index.html"><img id="logo" src="images/Logo.svg"></a>
         <ul>
             <li id="port">About Me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
