--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body id="portbody">
     <img id="vector" src="images/footer-vector.svg">
     <nav id="portnav">
-        <img id="logo" src="images/Logo.svg">
+        <a href="index.html"><img id="logo" src="images/Logo.svg"></a>
         <ul>
             <li><a href="aboutme.html">About Me</a></li>
             <li id="port">Portfolio</li>
