--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/wip.png" class="d-block w-100" alt="...">
+                    <img src="images/GEHatC.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/wip.png" class="d-block w-100" alt="...">
+                    <img src="images/AeroC.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/wip.png" class="d-block w-100" alt="...">
+                    <img src="images/LiftC.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -49,28 +49,28 @@
     </div>
     <div class="portboxes">
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/GEShirtDemo.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/GEHatDemo.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/GEVanDemo.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/GEPort.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/LiftDemo.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/LiftPort.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/AeroDemo.png">
         </div>
         <div class="portimage">
-            <img src="images/wip.png">
+            <img src="images/AeroPort.png">
         </div>
     </div>
 
